git-tac-toe/src/index.css
@media only screen and (min-width : 319px) {
  html {
    display: flex;
    justify-content: center;
  }

  body {
    font: 14px "Century Gothic", Futura, sans-serif;

  }

  ol, ul {
    display: flex;
    flex-direction: column;
  }

  .status {
    display: flex;
    justify-content: center;
    min-height: 1em;
  }

  .square {
    background: #fff;
    border: 1px solid #999;
    float: left;
    font-size: 1.5em;
    font-weight: bold;
    line-height: 4em;
    height: 4em;
    margin-right: -1px;
    margin-top: -1px;
    padding: .5em;
    text-align: center;
    width: 4em;
  }

  .winningSquare:focus {
    outline: none;
  }

  .winningSquare {
    background: #fff;
    border: 1px solid #999;
    float: left;
    font-size: 1.5em;
    font-weight: bold;
    line-height: 4em;
    height: 4em;
    margin-right: -1px;
    margin-top: -1px;
    padding: .5em;
    text-align: center;
    width: 4em;
    box-shadow: 0 0 0 2px darkseagreen inset;
  }

  .square:hover, a{
    cursor: pointer;
  }

  .square:focus {
    outline: none;
  }

  .kbd-navigation .square:focus {
    background: #ddd;
  }

  .game {
    margin-top: 20%;
    display: flex;
    flex-direction: column;
    text-align: center;
  }

  .game-info {
    margin: 2.5%;
  }

  ol {
    display: none;
  }

  .winners {
    background-color: green;
  }
}

@media only screen and (min-width : 767px) {
  .square {
    line-height: 6em;
    height: 6em;
    width: 6em;
  }

  .winningSquare {
    line-height: 6em;
    height: 6em;
    width: 6em;
  }
}

.thankyou {
  margin-top: 10%;
  font-size: .5em;
}

.thankyou a {
  text-decoration: none;
}

